--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "mongodb": "^4.13.0",
+    "mongoose": "^6.8.4",
     "nodemon": "^2.0.20"
   }
 }
